--- a/client/dudo/src/styles/about.css
+++ b/client/dudo/src/styles/about.css
@@ -1,6 +1,7 @@
 #about {
   height: auto;
-  min-height:89vh;  
+  min-height:88.75vh; 
+  padding-top: 3%;
   padding-left: 25%;
   padding-right: 25%;
   padding-bottom: 10px;
